# java_indirect_dependency

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: workflow.yaml
nixpkgs/: default.nix
