module(
    name = "java_indirect_dependency",
    version = "0",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "5.1",
)

bazel_dep(
    name = "rules_java",
    version = "6.1.0",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "maven",
    artifacts = ["org.apache.spark:spark-core_2.10:1.6.0"],
)

use_repo(maven, "maven")
